exports[`applyTransform should format a transform style object to a string 1`] = `
Object {
  "color": "red",
  "perspective": "17px",
  "transform": "matrix(1.0, 2.0, 3.0, 4.0, 5.0, 6.0) translate(12px, 50%) translateX(2px) translateY(2px) scale(2, 0.5) scaleX(2) scaleY(0.5) rotate(0.5turn) skew(30deg, 20deg) skewX(30deg) skewY(1.07rad) matrix3d(1.0, ..., 16.0) translate3d(12px, 50%, 3em) translateZ(2px) scale3d(2.5, 1.2, 0.3) scaleZ(0.3) rotate3d(1, 2.0, 3.0, 10deg) rotateX(10deg) rotateY(10deg) rotateZ(10deg)",
}
`;

exports[`applyTransform should merge with an existing \`transform\` property 1`] = `
Object {
  "transform": "scale(1) translate(12px, 50%)",
}
`;

exports[`applyTransform should overwrite an empty \`transform\` property 1`] = `
Object {
  "color": "red",
  "transform": "translate(12px, 50%)",
}
`;

exports[`applyTransform should overwrite an empty \`transform\` property 2`] = `
Object {
  "color": "red",
  "transform": "translate(12px, 50%)",
}
`;
